--- a/server/package.json
+++ b/server/package.json
@@ -10,11 +10,15 @@
   "license": "MIT",
   "type": "module",
   "dependencies": {
+    "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-jwt": "^7.7.2",
+    "express-jwt-permissions": "^1.3.6",
     "jsonwebtoken": "^8.5.1",
+    "jwks-rsa": "^2.1.3",
     "mongoose": "^6.3.4",
     "nodemon": "^2.0.16"
   }
