Auth0: not setting any token

--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "description": "Server part of Lunch Reservations",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "author": "Christopher Vestman",
   "license": "MIT",
